# xastc

./: README.md  cabal.project  xastc.cabal
XastTest/: xast.toml
XastTest/src/: Main.xst
XastTest/src/Utils/: Components.xst  Garbage.xst  Renderer.xst
app/: Main.hs
src/Xast/: AST.hs  Config.hs  Pipeline.hs
src/Xast/Error/: Pretty.hs  Types.hs
src/Xast/Parser/: Common.hs  Expr.hs  Extern.hs  Function.hs  Headers.hs  Ident.hs  Program.hs  System.hs  Type.hs
src/Xast/SemAnalyzer/: Analysis.hs  Monad.hs  Query.hs  Types.hs
src/Xast/Utils/: List.hs  Pretty.hs
test/: Main.hs
